--- a/MovilTDM/AppTransportista/AppTransportista/AppTransportista.csproj
+++ b/MovilTDM/AppTransportista/AppTransportista/AppTransportista.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\NavigationService.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MenuItemViewModel.cs" />
     <Compile Include="ViewModel\OrderViewModel.cs" />
